Remove `new Integer`
Use `Integer.valueOf` instead.
For converting String to int, use `Integer.parseInt`.